--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -83,18 +83,20 @@
 .mentors h2, .students-sec h2, .projects-sec h2, .blogs-sec h2,
 .designs-sec h2, .latest-issues h2, .social-media h2,
 .white-header, .contributors-sec h2 {
-    background-color: rgba(255,255,255,0.7);
+    background: linear-gradient(-45deg, #3c38ab, #720596);
     margin: 0 auto;
     margin-top: 30px;
     margin-bottom: 0.8em;
-    width: 100% !important;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    width: 50% !important;
+    padding: 20px 0px;
+    /* padding-bottom: 10px; */
+    border-radius: 500px;
     font-size: 35px;
     text-align: center;
-    color: black;
+    font-weight: 800;
+    color: white;
     text-transform: uppercase;
-    box-shadow: 1px 2px 20px rgba(33,35,23,.51);
+    /* box-shadow: 1px 2px 20px rgba(33,35,23,.51); */
 }
 .mentors .mentors-wrapper, .blogs-sec .blogs-wrapper, .students-sec .students-wrapper, .projects-sec .projects-wrapper, .designs-sec .designs-wrapper, .contributors, #contributors-thanks{
     width: 100%;
@@ -109,7 +111,7 @@
     transition: all .2s ease-in;
 }
 .mentors .mentors-wrapper:hover, .students-sec .students-wrapper:hover, .projects-sec .projects-wrapper:hover, .blogs-sec .blogs-wrapper:hover, .designs-sec .designs-wrapper:hover {
-    box-shadow: 1px 5px 20px #888888;
+    
 }
 .mentors .card, #contributors-list .card, .students-sec .card, .projects-sec .card, .blogs-sec .card {
     width: 200px;
@@ -144,7 +146,7 @@
     vertical-align: middle;
 }
 .mentors .card:hover, #contributors-list .card:hover, .students-sec .card:hover, .projects-sec .card:hover, .blogs-sec .card:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
 }
 .mentors .card p, .students-sec .card p, .projects-sec .card p, .blogs-sec .card p {
     margin-top: 4.5%;
@@ -185,21 +187,26 @@
     background: white;
 }
 .mentors .card .avatar img, .students-sec .card .avatar .img, .projects-sec .card .avatar .img, .blogs-sec .card .avatar .img {
-    width: 100%;
+    width: 80%;
+    padding: 2%;
+    border-radius: 500px;
+    background-color: #fff;
+    box-shadow: 0em 0em 1em #00000030;
 }
 
 .mentors .social, #contributors-list .contribs, .students-sec .social, .projects-sec .links, .blogs-sec .links {
     position: absolute;
-    background: #fff;
+    background: #ffffff;
     opacity: 0;
-    top: 0;
+    top: -2%;
     width: 100%;
     height: 100%;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
     -o-transition: all 0.5s;
     transition: all 0.5s;
-    padding-top: 20%;
+    padding-top: 30%;
+    cursor: pointer;
 }
 .mentors .card .avatar:hover .social, .students-sec .card .avatar:hover .social, .projects-sec .card .avatar:hover .links, .blogs-sec .card .avatar:hover .links {
     opacity: 0.8;
@@ -210,7 +217,7 @@
     text-align: center;
 }
 .mentors .mentors-wrapper {
-    background: #009688;
+    background: transparent;
 
 }
 
